--- a/ActuatorApp/nbproject/private/private.properties
+++ b/ActuatorApp/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.yoctoAPI.jar=C:\\Users\\arabe\\Desktop\\Binaries\\yoctolib-1.10.18903-SNAPSHOT-sources.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\arabe\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\Karl\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
